Fix for Hudson warnings in LTTng TMF Core Unit + Test suites